Update return value of getComputedStyle for sticky elements

Top/bottom/left/right have special meaning for sticky elements. So when
calling getComputedStyle on sticky elements whose style contains
"top: auto;", we should return "auto" rather than "0px" to eliminate
ambiguity.
Chromium followed the spec which specifies that getComputedStyle should
return used value (0px) for sticky elements with "top: auto;". That is
incorrect. A spec issue has been added:
https://github.com/w3c/csswg-drafts/issues/1346

BUG=703816
TEST=LayoutTests/fast/css/sticky/sticky-top-auto-get-computedstyle.html

Review-Url: https://codereview.chromium.org/2870983002
Cr-Commit-Position: refs/heads/master@{#471185}

Former-commit-id: c6fcc669f0a2e7d8f9cbf99704a1ca4ca3a8c77f